- Makefile: Avoid breaking linker lines. (VRI)
- Makefile: Move additional linker options to the end of the command line. (VRI)
- Makefile: Added padding message. (VRI)
- Makefile: Added the # character in front of the output messages. (VRI)
- Makefile: Replaced in by into. (VRI)
- bios/screen.c: Added missing volatile. (VRI)

2011-09-26
- po/de.po: Updated German translation. (THH)
- po/cs.po: Updated Czech translation. Contributed by Pavel Salac. (VRI)
- po/fi.po: Updated Finnish translation. Contributed by Eero Tamminen. (VRI)
- vdi/vdi_line.c: Fixed missing lines whan drawing arrows. Contributed by David
  Savinkoff. (VRI)
- vdi/vdi_line.c: Removed an unused ptr++ in wideline(). Contributed by David
  Savinkoff. (VRI)

2011-09-27
- vdi/vdi_line.c: Fixed random arrow sizes caused by WORD overflow. Contributed
  by David Savinkoff. (VRI)

2011-09-28
- bios/clock.c: Fixed wrong minutes in NVRAM's ndosettime(). (VRI)

2011-09-30
- cli/command.c: Fixed random crash when starting a program in EmuCON. (VRI)

2011-10-01
- bios/screen.c: Added debug trace on vsetmode(). (VRI)
- bios/nvram.c: The NVRAM checksum was checked only on the first call to
  nvmaccess(). Fixed. (VRI)
- bios/machine.c: Added debug traces for AKP and IDT cookies. (VRI)
- bios/screen.c: Always use the default video mode on the FireBee, until the
  VIDEL and vsetmode() are reliable. (VRI)

2011-10-03
- bios/machine.c bios/screen.c: Minor adjustments to ease next conditional
  compilation. (VRI)
- util/intmath.c include/intmath.h vdi_vdi_line.c: Moved Isqrt() to intmath.c
  since it is the right place for integer math. (VRI)
- doc/bugs.txt doc/todo.txt: Update to reflect current status. Contributed by
  Roger Burrows. (VRI)
- bdos/fs.h bdos/fsdir.h bdos/fsopnclo.c: Replace magic numbers for file
  attributes with #defines. Contributed by Roger Burrows. (VRI)

2011-10-05
- doc/fat16.txt: Add documentation for FAT16 filesystem code. Contributed by
  Roger Burrows.